# NexusCore

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .ninja_deps  .ninja_log  .pre-commit-config.yaml  AITextEditorApp.cpp  BUILD_STATUS.md  CHRONOLOG.md  CHRONOLOG.md.bak  CMakeLists.minimal.txt  CMakeLists.test.txt  CMakeLists.txt  CMakeLists.txt.bak  CMakeLists.txt.new  CMakeLists_new.txt  CNAME  CNAME.bak  COMMIT_MESSAGE.txt  CONTRIBUTING.md  CPR_VS_CURL_FINDINGS.md  DIRECT_CURL_APPROACH.md  DeadlockTest.cpp  EnhancedEditorStandalone.cpp  FUTURE_IMPROVEMENTS.md  LICENSE  Makefile  PHASE2_PROGRESS.md  PROGRESS.md  PROJECT_IMPROVEMENT_PLAN.md  README.md  REFINEMENTS.md  ROADMAP.md  STABILITY.md  SimpleInsertTest.cpp  SimpleTextBufferTest.cpp  TEST_MDC.md  THREAD_SAFETY.md  ai_test.py  (+52 more)
.github/: PULL_REQUEST_TEMPLATE.md
curl_test_cmake/: CMakeLists.txt
curl_test_cmake/cpr_build/cpr/cpr.dir/Debug/: cpr.dll.recipe  exports.def  objects.txt
curl_test_cmake/cpr_build/cpr/cpr.dir/MinSizeRel/: objects.txt
curl_test_cmake/cpr_build/cpr/cpr.dir/RelWithDebInfo/: objects.txt
curl_test_cmake/cpr_build/cpr/cpr.dir/Release/: objects.txt
curl_test_cmake/curl_test.dir/Debug/: curl_test.exe.recipe
curl_test_cmake/curl_test.dir/Debug/curl_test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
curl_test_cmake/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
curl_test_cmake/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.read.1.tlog
curl_test_cmake/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
curl_test_cmake/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
docs/: CNAME  (+25 more)
gtest_project/: CMakeLists.txt  build_and_run.bat  minimal_test.cpp
mini_demo/: CMakeLists.txt  SimpleEditor.cpp  Test
minimal_test/: CMakeLists.txt  MinimalTest.cpp  build_and_run.bat
plugins/SamplePlugin/: CMakeLists.txt  README.md  SamplePlugin.cpp  SamplePlugin.h
rpg_demo/: CMakeLists.txt  README.md  RPGGame.cpp  RPGGame.h  RPGState.cpp  RPGState.h  build_and_test.bat  main.cpp  setup_environment.ps1
rpg_demo/tests/: CMakeLists.txt  README.md  test_rpggame.cpp  test_rpgstate.cpp
src/di/: AppDebugLog.h  ApplicationFactory.hpp  ApplicationModule.hpp  CMakeLists.txt  CircularDependencyDoc.md  CommandManagerFactory.hpp  ComponentFactories.h  ComponentFactories.hpp  CoreModule.cpp  CoreModule.hpp  DIApplicationExample.cpp  DIFramework.cpp  DIFramework.hpp  DIFramework.md  DIPatterns.hpp  DiffMergeModule.cpp  DiffMergeModule.hpp  EditorFactory.hpp  ErrorReporterFactory.hpp  Injector.cpp  Injector.hpp  LifetimeExample.cpp  LifetimeManager.cpp  LifetimeManager.hpp  LifetimeManager.md  MigrationGuide.md  ModuleManager.cpp  ModuleManager.hpp  README.md  RequestScopeExample.cpp  RequestScopeManager.hpp  ServiceCollection.hpp  ServiceProvider.hpp  SyntaxHighlightingManagerFactory.hpp  TextBufferComponentFactory.cpp  TextBufferComponentFactory.h  TextBufferFactory.h  TextBufferFactory.hpp  ThreadSafetyConfig.h  TypeTraits.hpp  (+4 more)
src/di/factories/: CommandRegistryFactory.hpp  EventRegistryFactory.hpp  PluginManagerFactory.hpp  SyntaxHighlightingRegistryFactory.hpp  UIExtensionRegistryFactory.hpp  WorkspaceExtensionFactory.hpp
src/di/tests/: DIFrameworkTest.cpp  DITest.cpp  SimpleTest.cpp  SingletonDebugTest.cpp
src/tests/: CMakeLists.txt  CodebaseIndexerMinimalTest.cpp  CodebaseIndexerTest.cpp  CollaborativeEditingTest.cpp  ContextGatheringTest.cpp  DIFrameworkTest.cpp  EditorMultiCursorTest.cpp  KnowledgeBaseIntegrationTest.cpp  KnowledgeBaseTest.cpp  MultiCursorTest.cpp
standalone_test/: CMakeLists.txt  SimpleTextBuffer.h  SimpleTextBufferTest.cpp  ThreadSafeSimpleTextBuffer.h  test_output.txt
test/: CMakeLists.minimal.txt  CMakeLists.txt  ErrorReporterImpl.h  ErrorReporterStub.cpp  ErrorReporterStub.h  MinimalTextBuffer.h  TextBuffer.h  TextBuffer_test.cpp  build_and_run.bat  build_and_run_actual.bat  build_final_test.bat  build_real_test.bat  build_simple_test.bat  run_minimal_tests.bat  run_tests.bat  simple_textbuffer_test.cpp  simple_textbuffer_test_final.cpp  test_actual_textbuffer.cpp  test_minimal_textbuffer.cpp  test_real_textbuffer.cpp  test_textbuffer.cpp
test/minimal_build/: Makefile
test_build/: CMakeLists.txt  Makefile
test_llama/: .gitignore  CMakeLists.txt  test_llama.cpp
tests/: AIAgentOrchestratorTest.cpp  AdvancedEditorTests.cpp  AsyncLoggingTest.cpp  AutomatedConcurrencyTest.cpp  AutomatedSearchTest.cpp  AutomatedSyntaxHighlightingTest.cpp  AutomatedUndoRedoTest.cpp  BasicEditorTests.cpp  CMakeLists.txt  CMakeLists.txt.bak  CMakeListsMinimal.txt  CMakeLists_LargeFileTest.txt  COMPREHENSIVE_TEST_PLAN.md  ClipboardStandaloneTest.cpp  ClipboardTest.cpp  CombinedTestRunner.cpp  CommandLogicTests.cpp  CommandManagerTests.cpp  ComprehensiveFunctionalityTest.cpp  ComprehensiveUndoRedoTest.cpp  DIFrameworkTest.cpp  DependencyInjectionFixedTest.cpp  DependencyInjectionTest.cpp  DiffMergeTest.cpp  DocumentTest.cpp  EditorApiExtensionsTest.cpp  EditorBasicTest.cpp  EditorCoreFunctionalityTest.cpp  EditorDemoClipboardTest.cpp  EditorDemoClipboardTest_final.cpp  EditorDemoClipboardTest_final2.cpp  EditorDemoClipboardTest_final3.cpp  EditorDemoClipboardTest_fixed.cpp  EditorDemoClipboardTest_minimal.cpp  EditorDemoClipboardTest_new.cpp  EditorDemoClipboardTest_simple.cpp  EditorDependencyInjectionTest.cpp  EditorMinimalTest.cpp  EditorMockTest.cpp  EditorTest.cpp  (+110 more)
tests/build_minimal/EditorMockTest.dir/Release/: EditorMockTest.exe.recipe
tests/build_minimal/MinimalTest.dir/Release/: MinimalTest.exe.recipe
tests/build_simple_test/SimpleEditorTest.dir/Debug/: SimpleEditorTest.exe.recipe
tests/data/: hello_world.txt  testfile.txt
tests/di/: CMakeLists.txt  DependencyInjectionTests.cpp  TestServices.hpp
tests/standalone/: DeadlockTest.cpp  ManualUndoRedoTest.cpp  SearchFunctionalityTest.cpp  SyntaxHighlightingTest.cpp  UndoRedoTest.cpp
(+531 files in other folders)
